--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "An NFT Marketplace",
   "author": "clarionnorth@gmail.com",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@metamask/detect-provider": "^1.2.0",
+    "@mui/material": "^5.8.3",
     "@openzeppelin/contracts": "^4.3.1",
+    "@truffle/hdwallet-provider": "^2.0.9",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
@@ -23,7 +27,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "3.2.0",
     "truffle": "5.0.5",
-    "web3": "1.0.0-beta.55"
+    "web3": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
